Ajuste de ruta imagen

--- a/Publicacion/index.html
+++ b/Publicacion/index.html
@@ -12,7 +12,7 @@
 			<header id="header" class="header contenedor">
 				<!-- header -->
 				<figure class="logotipo">
-					<img src="images/Invie.png" width="186" height="60" alt="Invie logotipo">
+					<img src="images/invie.png" width="186" height="60" alt="Invie logotipo">
 				</figure>
 				<nav class="menu">
 					<ul>
